Improve specs via rubocop rspec gem & update rubocop yml to run spec cops automatically
- Also add rubocop-performance cops to rubocop config fix to run related cops automatically
- Ignore less important cops
- Modify default values of certain cops as needed & reasonably appropriate

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,16 @@ Metrics/MethodLength:
   Max: 25 # Default: 10
 Naming/AccessorMethodName:
   Enabled: false
+
+require:
+  - rubocop-performance
+  - rubocop-rspec
+
+RSpec/NestedGroups:
+  Max: 4 # Default: 3
+
+RSpec/MultipleExpectations:
+  Max: 4 # Default: 1
+
+RSpec/ExampleLength:
+  Enabled: false
